# my-genai-platform

./: .gitignore  agent-platform-dashboard - Copy.py.backup  agent-platform-dashboard.py  deded.ipynb  documentation.md  master_ui.py  old-agent-platform-dashboard.py  report.md  requirements.txt  tweety.ipynb
.devcontainer/: devcontainer.json
.ipynb_checkpoints/: tweety-checkpoint.ipynb
crews/automated_project_planner/: pyproject.toml
crews/automated_project_planner/src/automated_project_planner/: crew.py  main.py
crews/automated_project_planner/src/automated_project_planner/config/: tasks.yaml
crews/docgenbuddy/: report.md
crews/docgenbuddy/src/docgenbuddy/: crew.py  main.py
crews/docgenbuddy/src/docgenbuddy/config/: agents.yaml  tasks.yaml
crews/docgenbuddy/src/docgenbuddy/config copy/: agents.yaml  tasks.yaml
crews/docgenbuddy/src/docgenbuddy/tools/: xxd.py
crews/interview_researcher/: pyproject.toml
crews/interview_researcher/src/interview_researcher/: crew.py
crews/interview_researcher/src/interview_researcher/config/: tasks.yaml
crews/project_progress_report/: pyproject.toml
crews/project_progress_report/src/project_progress_report/: crew.py  main.py
crews/project_progress_report/src/project_progress_report/config/: agents.yaml  tasks.yaml
crews/project_progress_report/src/project_progress_report/tools/: custom_tool.py
crews/stock_market_analysis/: pyproject.toml
crews/stock_market_analysis/src/stock_market_analysis/: crew.py  main.py
crews/stock_market_analysis/src/stock_market_analysis/config/: agents.yaml  tasks.yaml
crews/toolsexp/: Untitled.ipynb  pyproject.toml
crews/toolsexp/src/toolsexp/: main.py
crews/webparsepro/src/webparsepro/: crew.py
crews/webparsepro/src/webparsepro/config/: tasks.yaml
docgenbuddy/: README.md  pyproject.toml  report.md
features/: doc_gen_buddy copy.py  doc_gen_buddy.py  smart_hire.py
interview_researcher/: README.md
interview_researcher/src/interview_researcher/: crew.py  main.py
interview_researcher/src/interview_researcher/config/: agents.yaml  tasks.yaml
toolsexp/: README.md
toolsexp/src/toolsexp/: crew.py
ui_utils/: agent_runner.py  custom_css.py
webparsepro/: README.md  pyproject.toml  travel_plan.md
webparsepro/src/webparsepro/: main.py
webparsepro/src/webparsepro/config/: agents.yaml
