[project]
name = "docgenbuddy"
version = "0.1.0"
description = "DocGenBuddy using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
docgenbuddy = "docgenbuddy.main:run"
run_crew = "docgenbuddy.main:run"
train = "docgenbuddy.main:train"
replay = "docgenbuddy.main:replay"
test = "docgenbuddy.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
