[project]
name = "automated_project_planner"
version = "0.1.0"
description = "automated-project-planner using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
automated_project_planner = "automated_project_planner.main:run"
run_crew = "automated_project_planner.main:run"
train = "automated_project_planner.main:train"
replay = "automated_project_planner.main:replay"
test = "automated_project_planner.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
