[project]
name = "interview_researcher"
version = "0.1.0"
description = "interview-researcher using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
interview_researcher = "interview_researcher.main:run"
run_crew = "interview_researcher.main:run"
train = "interview_researcher.main:train"
replay = "interview_researcher.main:replay"
test = "interview_researcher.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
