[project]
name = "stock_market_analysis"
version = "0.1.0"
description = "stock-market-analysis using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
stock_market_analysis = "stock_market_analysis.main:run"
run_crew = "stock_market_analysis.main:run"
train = "stock_market_analysis.main:train"
replay = "stock_market_analysis.main:replay"
test = "stock_market_analysis.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
